--- a/posts/post-with-code/wr_fantasy_pts.qmd
+++ b/posts/post-with-code/wr_fantasy_pts.qmd
@@ -1,6 +1,10 @@
 ---
-title: "Predicting Wide Receiver Fantasy Points w/ slideR and Tidymodels"
+title: "Predicting Wide Receiver Fantasy Points w/ Tidymodels"
 author: "Sameer Sapre"
+date: "2024-05-16"
+categories: [news, code, analysis]
+image: "image.jpg"
+draft: TRUE
 editor: visual
 ---
 
@@ -8,9 +12,17 @@ editor: visual
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
+## Introduction
+
+I've played fantasy football for a decade and have always wondered how ESPN (and Yahoo, Sleeper, etc.) make their fantasy projections week to week. Where are they getting their numbers? Where are they getting probabilities from? What makes them think that Bijan Robinson is going to score 16.3 points for me this week vs. D? Why does his projection go up that much (or that little) if Tyler Allgeir happens to be out injured? Perhaps we won't get a chance to peak inside of ESPN's crystal ball, but maybe we can try to build our own? 
+
+In this post, I'll attempt to build a predictive model that can output our projections for fantasy football players based on their past performance. We'll narrow the scope to wide receivers now, but this process can largely be applied to players of other positions. 
+
+We'll go step by step through data cleaning, feature engineering, model selection and training, and model validation before finishing up with conclusions and takeaways.
+
 ## R Markdown
 
-```{r message=TRUE, warning=TRUE}
+```{r message=FALSE, warning=FALSE}
 library(tidyverse)
 library(nflreadr)
 library(tidymodels)
@@ -19,11 +31,10 @@ library(nflfastR)
 
 ## Data Load
 
-```{r message=TRUE, warning=TRUE}
-stats24 = load_player_stats(2024)
-stats = load_player_stats(seasons = seq(2006,2023))
-pbp23 = load_pbp(2023)
+We'll start by loading in directly relevant player statistics and depth chart information
 
+```{r message=FALSE, warning=FALSE}
+stats = load_player_stats(seasons = seq(2006,2023))
 
 dc = load_depth_charts(season = seq(2016,most_recent_season())) %>% filter(position == 'WR',formation == 'Offense') %>%
   select(season,recent_team = club_code,week,season_type = game_type,player_id = gsis_id,depth_team)
@@ -34,10 +45,9 @@ dc = load_depth_charts(season = seq(2016,most_recent_season())) %>% filter(posit
 # Filter for wide receiver plays
 wr_data <- stats %>%
   filter(position == "WR") %>%
+  # Select identifying info + receiver specfic metrics
   select(player_id,player_name,position,recent_team,season,week,season_type,
          receptions:fantasy_points_ppr) %>%
-  # Receiving FP
-  mutate(rec_fp = (receiving_yards * 0.1) + (receiving_tds * 6) + (receptions * 0.5)) %>%
   # Add depth chart status since we don't have participation data
   left_join(y = dc,by = c('player_id','week','season','season_type',"recent_team")) %>%
   # Only first 3 are counted so some players are NA'd if they're below 3rd on DC
@@ -65,7 +75,6 @@ ff_2024 %>% filter(position == 'WR') %>% select(game_id,player_id,season,rec_fan
 It looks like there are some patterns of missingness in the dataset we've created. Ideally, we'd could probably impute these values, but for the brevity, we'll filter out the NA's of racr, due to the intersection with other metrics. 
 
 ```{r}
-library(naniar)
 
 gg_miss_case(wr_data)
 
@@ -220,8 +229,8 @@ sum(colSums(is.na(test_data)))
 ```{r}
 
 exp_recipe = train_data  %>%
-  recipe(fantasy_points_target ~ .,) %>%
-  update_role(c(player_id,recent_team,fantasy_points,fantasy_points_ppr),new_role = 'ID') %>%
+  recipe(log_fantasy_points ~ .,) %>%
+  update_role(c(player_id,recent_team,fantasy_points,fantasy_points_ppr,fantasy_points_target),new_role = 'ID') %>%
   # Generally not recommended to throw out all data, but for brevity, let's remove NAs
   step_naomit(all_numeric_predictors()) %>%
  # Remove zero variance predictors (ie. variables that contribute nothing to prediction)
@@ -345,11 +354,12 @@ Now that we have our model fit on the full training set, let's evaluate it, chec
 ```{r}
 # Make predictions on the test set and tidy
 glm_predictions <- augment(final_glm_fit, new_data = test_data) %>%
-  mutate(.resid = fantasy_points_target - .pred)
+  mutate(.pred_fp = exp(.pred) + 1,
+         .resid = fantasy_points - .pred_fp)
 
 # Evaluate the model's performance (RMSE)
 glm_metrics <- glm_predictions %>%
-  metrics(truth = fantasy_points_target, estimate = .pred)
+  metrics(truth = fantasy_points, estimate = .pred_fp)
 
 # Print the evaluation metrics
 print(glm_metrics)
@@ -360,7 +370,7 @@ glm_predictions  %>%
     geom_histogram()
 
 # Residuals vs fitted
-ggplot(glm_predictions,aes(x = .pred, y=.resid)) +
+ggplot(glm_predictions,aes(x = .pred_fp, y=.resid)) +
   geom_point() +
   geom_hline(yintercept = 0,linetype = "dashed",color = "red")+
   labs(title = "Residuals vs. Fitted", y= "Residuals",x = "Fitted")
@@ -376,7 +386,7 @@ ggplot(glm_predictions,aes(sample = .resid)) +
   theme_minimal() 
 ```
 
-This plot is a bit indicting as we can see the points at the end of the QQPlot start to tail off, suggesting that there are some outliers in fantasy points scored or a linear model may not be the best approach for this dataset and we probably should not trust this model for valid inference and prediction. We should use this as a reason to explore non-linear modeling techniques or modify this model to include interactions or transform the target variable.  
+This plot is a bit indicting as we can see the points at the end of the QQPlot start to tail off, suggesting that there are some outliers in fantasy points scored or a linear model may not be the best approach for this dataset. We probably should not trust this model for valid inference and prediction and should continue to explore non-linear modeling techniques or modify this model to include interactions or transform the target variable.  
 
 
 ```{r}
@@ -386,8 +396,42 @@ final_glm_fit %>%
          Variable = fct_reorder(Variable,Importance)) %>%
   ggplot(aes(x = Importance, y = Variable, fill = Sign)) +
   geom_col() +
-  scale_x_continuous(expand = c(0,0))
+  scale_x_continuous(expand = c(0,0)) +
+  labs(x = "Impact")
   
 ```
 
-As mentioned earlier, we will probably need to better account for interaction terms either thr
+I'm not personally not a huge fan of variable importance plots because they don't communicate the actual "importance" of the variable to the outcome of our target. In other words, they're not that useful (by themselves) for interence. They really just measure the impact of the variables on predictions. I'll take the first 2 variables on this plot as examples.
+
+In this case, we can see that "wopr" is defined by 
+
+Weighted Opportunity Rating - 1.5 x target_share + 0.7 x air_yards_share - a weighted average that contextualizes total fantasy usage.
+
+It makes sense for "wopr" to have an impact on fantasy points scored as it directly describes fantasy opportunity for receivers. All else being equal, it's likely that increased opportunity results in increased fantasy point value and we can reasonably say something like, "If a WR sees an increase in their opportuntiy rate due to increased skill, trust from coaches, injury to teammates, etc. we can can expect an increase in fantasy production". However is "receiving_fumbles_lost", the second highest impact, reasonable? Considering that fantasy points are **deducted** when a player fumbles the ball in real life, this doesn't make much sense. We'd be hard-pressed to convince anyone to target a player who fumbles the ball often. Why is this the case?
+
+It's likely due to an issue called collinearity. In order to fumble the ball you must first have **received it**. The players with the highest number of fumbles are likely the ones getting the ball thrown to their way the most and consequently getting increased opportunity to score more points in addition to fumbles. This is a prime example of an issue called multi-collinearity or a fancy way of saying that 2 predictors are highly correlated with each other. Below we can see "fumbles lost" as a function of receptions and weighted opportunity, respectfully.
+
+```{r}
+ggplot(train_data, aes(x = wt_receptions, y = wt_receiving_fumbles_lost)) + 
+  geom_smooth()
+
+ggplot(train_data, aes(x = wt_wopr, y = wt_receiving_fumbles_lost)) + 
+  geom_smooth()
+```
+
+
+
+As mentioned earlier, the regularized model handles variable selection but does not completely remove the effects of multicollinearity. We will likely need a model better suited for non-linear relationships or include more interactions to improve model performance and interpretability.
+
+## Conclusion
+
+This was a good first step in creating a model for my fantasy football needs. There is clearly room for improvement as far as model selection goes, but it was fun to use the `slider` package for the first time and attempt to a transformed target variable. I have some ideas for additions to and subtractions from this model that will hopefully make it into another blog post. In the meantime, big shoutout to the `nflreadr` team for making this data easily available. 
+
+@Manual{,
+  title = {nflreadr: Download 'nflverse' Data},
+  author = {Tan Ho and Sebastian Carl},
+  year = {2024},
+  note = {R package version 1.4.1.05, https://github.com/nflverse/nflreadr},
+  url = {https://nflreadr.nflverse.com},
+}
+
