--- a/posts/post-with-code/wr_fantasy_pts.qmd
+++ b/posts/post-with-code/wr_fantasy_pts.qmd
@@ -8,15 +8,15 @@ image: "chase.jpg"
 editor: visual
 ---
 
-```{r setup, include=FALSE}
+```{r setup, include=FALSE,message=FALSE, warning=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
 ## Introduction
 
-I've played fantasy football for a decade and have always wondered how ESPN (and Yahoo, Sleeper, etc.) make their fantasy projections week to week. Where are they getting their numbers? Where are they getting probabilities from? What makes them think that Ja'Marr Chase is going to score 16.3 points for me this week vs. D? Why does his projection go up that much (or that little) if Tee Higgins happens to be out injured? Perhaps we won't get a chance to peak inside of ESPN's crystal ball, but maybe we can try to build our own? 
+I've played fantasy football for a decade and have always wondered how ESPN (and Yahoo, Sleeper, etc.) make their fantasy projections week to week. Where are they getting their estimates from? Why is Ja'Marr Chase projected to score 16.3 points for me this week? Why does his projection go up that much (or that little) if Tee Higgins happens to be out injured? Perhaps we won't get a chance to peak inside of ESPN's crystal ball, but maybe we can try to build our own!
 
-In this post, I'll attempt to build a predictive model that can output our projections for fantasy football players based on their past performance. We'll narrow the scope to wide receivers now, but this process can largely be applied to players of other positions. 
+In this post, I'll attempt to build a predictive model that can output our projections for fantasy football players based on their past performance. We'll narrow the scope to wide receivers now, but this process can largely be applied to players of any position. 
 
 We'll go step by step through data cleaning, feature engineering, model selection and training, and model validation before finishing up with conclusions and takeaways.
 
@@ -77,11 +77,11 @@ df_miss %>%
 # What if we take out racr?
 ```
 
- Ideally, we'd could probably impute these values, but for the brevity, we'll filter out the NA's of racr, due to the intersection with other metrics. Player Name is not important for our purposes.
+ Ideally, we would like to impute these values, but for brevity, we'll filter out the NA's of 'racr'.
 
 ## Time Weighting
 
-We want our predictions for each player to be based on their past performance. However, we'd like the most recent performances to be weighed the heaviest. To do that, we can introduce a simple time-weighting scheme. In the function below, we take a data vector (ex. receptions) and return a weighted average based on the length of the vector.
+We want our predictions for each player to be based on their past performance. However, we'd like the most recent performances to be weighed heaviest. To do that, we can introduce a simple time-weighting scheme. In the function below, we take a data vector (ex. receptions) and return a weighted average based on the length of the vector.
 
 
 ```{r}
@@ -105,7 +105,7 @@ weighted_avg = function(metric_vector){
 
 ```
 
-Now that we have our simple time-weighting built, let's make use of Davis Vaughn's [slider] (https://slider.r-lib.org/articles/slider.html) package. It's a tidy way to calculate sliding window summaries. We'll do that to create a set of potential numeric predictors.
+Now that we have our simple time-weighting built, let's make use of Davis Vaughn's [slider](https://slider.r-lib.org/articles/slider.html) package. It's a tidy way to calculate sliding window summaries. We'll do that to create a set of potential numeric predictors.
 
 ```{r}
 library(TTR)
@@ -117,11 +117,12 @@ wr_data %>%
   group_by(player_id,season) %>%
   arrange(week) %>%
   # Weighted Avg (moving)
-  # Take lag so we are not leaking any data
+  # Take lag so we are not leaking data
   mutate(across(receptions:depth_team, ~ lag(slide_dbl(.x,.f = weighted_avg,.before = Inf,.complete = TRUE)),.names = "wt_{col}")) %>%
   ungroup() %>%
   # Convert negative fantasy points to 0
   mutate(fantasy_points_target = ifelse(fantasy_points < 0,0,fantasy_points),
+         # Take log (more on this later)
          log_fantasy_points = log(fantasy_points_target + 1)) -> ma_wr
 
 ```
@@ -133,7 +134,7 @@ ma_wr %>%
   filter(season == 2023, player_id == '00-0036261') %>%
   select(player_name,week,targets,wt_targets, receptions,wt_receptions, receiving_yards,wt_receiving_yards)
 ```
-A quick scan indicates that our time weighted average is calculated as intended.
+A quick scan shows that our time weighted averages are calculated as intended.
 
 
 ## Correlations
@@ -159,7 +160,7 @@ ggplot(data = cor_data, aes(x = Var1, y = Var2, fill = value)) +
 
 ```
 
-Okay, it looks like there is a high degree of colinearity between our weighted measures. Not very surprising. We'll use a few modeling techniques below that should address the issues of highly correlated variables.
+Okay, the heatmap here shows a lot of red. It looks like there is a high degree of multicollinearity between our weighted measures. We'll touch on this issue, but won't fully address it in this post. Just be aware that it can make inference and interpretation of a linear model quite difficult.
 
 
 In addition, if we look at our target variable, we notice something interesting... it's got a skewed distribution. Should we be using linear regression? 
@@ -178,7 +179,7 @@ ma_wr %>%
   geom_histogram()
 ```
 
-Hmmm, our histogram still looks a bit funky. The distribution seems to have shifted closer to a bell curve we'd want for linear regression, but there are A LOT of 0s (more on that later).
+Hmmm, our histogram still looks a bit funky. The distribution seems to have shifted closer to a bell curve we'd want for linear regression, but there are A LOT of 0s (more on that later). For now, we'll run with this transformation and see where it takes us.
 
 ## Preprocess
 
@@ -203,19 +204,7 @@ train_data <- training(data_split)
 test_data  <- testing(data_split)
 ```
 
-```{r}
-wt_recipe = train_data %>%
-  recipe(fantasy_points_target ~ .,) %>%
-  update_role(c(player_id,recent_team,fantasy_points,fantasy_points_ppr),new_role = 'ID') %>%
-  # Generally not recommended to throw out all data, but for brevity, let's remove NAs
-  #step_naomit(all_numeric_predictors()) %>%
-  step_impute_median(all_numeric_predictors()) %>%
-  # Remove zero variance predictors (ie. variables that contribute nothing to prediction)
- step_center(all_numeric_predictors())
-#
 
-summary(wt_recipe)
-```
 
 ```{r}
 test_data %>%
@@ -224,7 +213,7 @@ test_data %>%
 sum(colSums(is.na(test_data)))
 ```
 
-## Model Building -------------------------------
+## Model Building 
 
 ```{r}
 
@@ -244,25 +233,21 @@ exp_recipe = train_data  %>%
 
 ```
 
-# Cross-Validation + Tuning -------------
+## Cross-Validation + Tuning -------------
 
-## Create Model
 
-Create specifications for elastic net model using glmnet and tune
+### GLM --------------------------
 
-## GLM --------------------------
-
-We'll train a general linear model (GLM). This is a type of linear regression which provides a type of built-in variable selection. The nuts and bolts of this modeling strategy are beyond the scope of this post, but for those interested in learning, there's tons of material on a concept called *regularization* upon which this strategy is built.
+We'll train a general linear model (GLM). This is a type of linear regression which provides a type of built-in variable selection. The nuts and bolts of this modeling strategy are beyond the scope of this post, but for those interested in learning, there are tons of material on a concept called *regularization* upon which this strategy is built.
 
 
 ```{r}
 library(glmnet)
-#library(lightgbm)
-#library(bonsai)
+
 
 glm_spec <- linear_reg(
-  penalty = tune(),     # Lambda (regularization strength)
-  mixture = tune(),    # Alpha (0 = Ridge, 1 = Lasso, values in between = Elastic Net)
+  penalty = tune(),     
+  mixture = tune(),    # Mixutre (0 = Ridge, 1 = Lasso, values in between = Elastic Net)
     
 ) %>%
   set_engine("glmnet")
@@ -283,7 +268,6 @@ glm_tune_results <- tune_grid(
 )
 ```
 
-Tune Model w/ Cross Validation
 
 Examine Tuning Results
 
@@ -296,7 +280,7 @@ glm_tune_results %>%
   arrange(mean)
 ```
 
-Find the best parameters of the group. `finalize_workflow()` will choose the model with the optimal set of hyperparameters as found in `select_best()`.
+Find the best parameters of the group - `finalize_workflow()` will choose the model with the optimal set of hyperparameters as found in `select_best()`.
 
 ```{r}
 # Select the best hyperparameters based on RMSE
@@ -308,7 +292,7 @@ final_glm_workflow <- finalize_workflow(glm_wflow, best_glm)
 best_glm
 ```
 
-\^ Above you'll find the optimal configuration of the model. We won't get too far into the weeds here, but will not that the penalty term is small (low regularization, high complexity) and the mixture (type of regularization) indicates more of a Ridge regression (more shrinkage, less variable elimination). 
+\^ Above you'll find the optimal configuration of the model. We won't get too far into the weeds here, but will note that the penalty term is small (low regularization, high complexity) and the mixture (type of regularization) indicates more of a Ridge regression (more shrinkage, less variable elimination). 
 
 Below, we'll take the best model and fit it to the entire training data set before validating it against the test set.
 
@@ -346,6 +330,7 @@ glm_predictions  %>%
 # Residuals vs fitted
 ggplot(glm_predictions,aes(x = .pred_fp, y=.resid)) +
   geom_point() +
+  geom_smooth(se = F) +
   geom_hline(yintercept = 0,linetype = "dashed",color = "red")+
   labs(title = "Residuals vs. Fitted", y= "Residuals",x = "Fitted")
 ```
@@ -359,7 +344,7 @@ ggplot(glm_predictions,aes(sample = .resid)) +
   theme_minimal() 
 ```
 
-This plot is a bit indicting as we can see the points at the end of the QQPlot start to tail off. It suggests that there are some outliers in fantasy points scored and/or a linear model may not be the best approach for this dataset. This lines up with the inflated number of 0s seen in our target variable. We probably should not trust this model for valid inference or prediction and should continue to explore non-linear options or modifications to this model (i.e. variable interactions or transformations).  
+While the histogram of residuals looks relatively normal. The other plots draw attention to some potential issues. Starting with the residuals vs. fits we're seeing the points tail off on the right side. These points should be scattered randomly we can see a pattern. Similarly, with the QQPlot, the right side of the plot seems to tail well off course. It suggests first that the model struggles mightly with estimating large fantasy point values, it could be due to outliers and/or that a linear model may not be the best approach for this problem. This lines up with the inflated number of 0s seen in our target variable. We probably should not trust this model for valid inference or prediction and should continue to explore non-linear options or modifications to this model (i.e. variable interactions or transformations).  
 
 
 ### Variable Importance
@@ -380,11 +365,11 @@ I'm not personally not a huge fan of variable importance plots because they don'
 
 In this case, we can see that "wt_target_share" is defined as "Player's share of team receiving targets in this game".
 
-It makes sense for this to have a positive impact on fantasy points scored as it directly describes fantasy opportunity for receivers. All else being equal, it's likely that increased opportunity results in increased fantasy point value and we can reasonably say something like, "If a WR sees an increase in their opportuntiy rate due to increased skill, trust from coaches, injury to teammates, etc. we can can expect an increase in fantasy production". 
+It makes sense that this has a positive impact on fantasy points scored as it directly describes fantasy opportunity for receivers. All else being equal, it's likely that increased opportunity results in increased fantasy point value and we can reasonably say something like, "If a WR sees an increase in their opportuntiy rate due to increased skill, trust from coaches, injury to teammates, etc. we can can expect an increase in fantasy production". 
 
-However is "receiving_fumbles_lost", the second highest impact, reasonable? Considering that fantasy points are **deducted** when a player fumbles the ball in real life, this doesn't make much sense. We'd be hard-pressed to convince anyone to target a player who fumbles the ball often. Why is this the case?
+However does "receiving_fumbles_lost" having a positive impact on the model seem reasonable? Considering that fantasy points are **deducted** when a player fumbles the ball in real life, this doesn't make much sense. We'd be hard-pressed to convince anyone to target a player who fumbles the ball often. Why is this the case?
 
-It's likely due to an issue called collinearity. In order to fumble the ball you must first have **received it**. The players with the highest number of fumbles are likely the ones getting the ball thrown to their way the most and consequently getting increased opportunity to score more points in addition to fumbles. This is a prime example of an issue called multi-collinearity or a fancy way of saying that 2 predictors are highly correlated with each other. Below we can see "fumbles lost" as a function of receptions and target share, respectfully.
+It's likely due to the afformentioned multicollinearity issue. In order to fumble the ball you must first have **received it**. The players with the highest number of fumbles are likely the ones getting the ball thrown their way the most and consequently getting increased opportunity to score more points in addition to fumbles. Below we can see "fumbles lost" as a function of receptions and target share, respectfully.
 
 ```{r}
 ggplot(train_data, aes(x = wt_receptions, y = wt_receiving_fumbles_lost)) + 
