--- a/posts/nfl-game-prediction/game_pred2.qmd
+++ b/posts/nfl-game-prediction/game_pred2.qmd
@@ -2,6 +2,7 @@
 title: "Predicting NFL Game Outcomes in R (part 2)"
 author: "Sameer Sapre"
 date: "2025-01-27"
+subtitle: "Tuning our regularized regression model"
 categories: [code, analysis,NFL] 
 image: "tuning.png"
 execute: 
@@ -12,7 +13,7 @@ page-layout: full
 
 ## Intro
 
-Hello everyone! In the [first post I shared on modeling NFL game outcomes](https://ssapre2.github.io/posts/nfl-game-prediction/), I shared a simple way to create a NFL game prediction model using  `nflreadR` and `tidymodels`. In this post, I'll share a simple way to improve our model using *cross-validation*.
+Hello everyone! In the [first post I shared on modeling NFL game outcomes](https://ssapre2.github.io/posts/nfl-game-prediction/), I shared a simple way to create a NFL game prediction model using  `nflreadR` and `tidymodels`. In this post, I'll share an easy way to *tune* our model.
 
 
 I'll skip the data cleaning portion since it's the same as the previous post. Ideally, I'd package these steps into a function as part of a larger package to spare you the time and make this process neater, repeatable, and editable. However, I'm not feeling very generous today (aka I'm too lazy), so I've copied and pasted the setup code in the hidden cell below.
@@ -122,12 +123,21 @@ matchup_ready = matchup_ready%>%
 ```
 
 Long story short, I want each row in the final dataset to represent an NFL game with each team's :
+
 1. Previous performance
 2. Injuries
 3. Opponent's previous performance
 4. Opponent's injuries
 
-There are definitely better ways to represent the pieces of information than I'm doing above (please let me know!), but I will focus on model tuning as the approach to improving model performance today.
+
+Here's what our data looks like ...
+
+```{r}
+head(matchup_ready)
+```
+
+
+There are certainly better ways to represent these pieces of information than what I've managed to do above (please let me know!), but this post will only focus on the simple step of model tuning.
 
 With that, I'll start directly from the modeling portion of the code. In the sections below, you'll see our basic `tidymodels` setup using our `recipes` object for pre-processing.
 
@@ -156,10 +166,9 @@ rec_impute = recipe(formula = home_win ~ .,
   #for each numeric variable/feature, replace any NA's with the median value of that variable/feature
   step_impute_median(all_numeric_predictors()) 
 
-# Create recipe to for moneyline model
 ```
 
-Here, we can see what the medians (NA-filler) values for each predictor.
+We added an extra step of removing zero-variance predictors.
 
 ```{r}
 imp_models <- rec_impute %>%
@@ -178,22 +187,23 @@ imp_models %>%
   bake(train_data) %>%
   is.na() %>%
   colSums()
-
-tidy(imp_models,number = 1)
 ```
 
 
+## Logistic Regression and Regularization
 
-## Modeling 
+In the last post, we introduced logistic regression as our model of choice. We wanted (and still want) to predict the probability that the home team wins a matchup and do that, we need a classification model. 
 
-Last time, we did this step without introducing any sort of parameter tuning. This time, we'll try to tune our logistic regression to see if that results in better (and more trustworthy) prediction accuracy. You can see in the `glm_spec` variable we introduce two new lines, `penalty = tune()` and `mixture = tune()`. What does that mean?
+Enter logistic regression, the simple, yet powerful classification technique made for classifying *linear data*.
 
 In logistic regression, we have the option of introducing something called **regularization**, which is just a fancy word for telling the model "don't overcomplicate things!". As you saw in the feature enigneering steps in the last post, there are a lot of variables and in many real world models (AI models included) the number of parameters can be in the billions! This is often too much information to pare down, so regularization is a simple step to help the model focus on the most important stuff. 
 This extra step helps the model avoid a common ML pitfall - **overfitting**. Think of it like this, imagine you have a math test tomorrow and your friend sends you the solutions to the practice exam. You study by memorizing the answers to practce exam (not by DOING the problems). The next day to open your test and ... shoot... you have to SHOW your work?? You don't even know where to start. That is overfitting, you've memorized the answers, but you don't know HOW to solve the problems or complete the process.
 
-Regularization is a way to penalize the model from memorizing inputs and instead forces it to make generalizations about relationships in the data (aka learn general patterns). You sacrifice a bit accuracy, for example, maybe you mix up some calculations on the exam incorrect, but you get partial credit for showing proper process.
+Regularization is a way to penalize the model for memorizing inputs and instead forces it to make generalizations about relationships in the data (aka learn general patterns). You sacrifice a bit accuracy, for example, maybe you mix up some calculations on the exam incorrect, but you get partial credit for showing proper process. There are some other pros and cons to regularization, but I'll leave that for you to research yourself.
 
-There are some other pros and cons to regularization, but I'll leave that for you to research yourself.
+## Modeling 
+
+Also left out in the last post was the crucial step of tuning (or optimizing) those regularization parameters. We fit our model using easy handpicked hand-picked values of `mixture = 0.05` and `penalty = 1`. This time, we'll try to tune our logistic regression to find the optimal values for both `mixture` and `penalty` based on model performance and check if that results in better (and more trustworthy) prediction accuracy. To do that, we introduce two new lines, `penalty = tune()` and `mixture = tune()` in the `glm_spec` variable. 
 
 ```{r}
 library('glmnet')
@@ -202,8 +212,7 @@ library('glmnet')
 
 glm_spec <- logistic_reg(
   penalty = tune(),     
-  mixture = tune(),    # Mixutre (0 = Ridge, 1 = Lasso, values in between = Elastic Net)
-    
+  mixture = tune()   
 ) %>%
   set_engine("glmnet")
 
@@ -220,14 +229,19 @@ folds <- vfold_cv(train_data, v = 5)
 glm_tune_results <- tune_grid(
   glm_wflow,
   resamples = folds,
+  metrics = metric_set(brier_class),
   grid = 10   # Number of tuning combinations to evaluate
 )
 
 ```
 
-Next, let's take a look at the results. We're primarily concerned with **brier score** since we want to measure how well our predicted probabilies are *calibrated* to actual results. Calibration refers to how well the predicted probabilities from a model match the actual observed outcomes. A well-calibrated model means that if it predicts a 70% chance of an event happening, the event should occur about 70% of the time in reality. For example, if a model predicts a team wins 60% of the time, the team should win about 60% of the time.
+These 2 lines will incorporate the tuning/optimization into our workflow. To finish the job, we add one more line `metrics = metric_set(brier_class)` as the evaluation criteria we're attempting to optimize for. Why we are using `brier_class()` is explained below.
 
-Brier score is a representation of that calibration on a 0-1 scale. The *lower* the score, the better Seeing a slight reduction in brier score between the last attempt (0.229) and this attempt (0.214) is good! If we want to go the extra mile, we can test the significance of the difference across CV folds to determine if this reduction is significant.
+## Brier Score
+
+Next, let's take a look at the results. We're primarily concerned with **brier score** since we want to measure how well our predicted probabilities are *calibrated* to actual results. Calibration refers to how well the predicted probabilities from a model match the actual observed outcomes. A well-calibrated model means that if it predicts a 70% chance of an event happening, the event should occur about 70% of the time in reality. For example, if a model predicts a team wins 60% of the time, the team should win about 60% of their real games.
+
+Brier score is a representation of that calibration on a 0-1 scale. The *lower* the score, the better. Seeing a slight reduction in brier score between the last attempt (0.229) and this attempt (0.216) is good! If we want to go the extra mile, we can test the significance of the difference across CV folds to determine if this reduction is significant.
 
 ```{r}
 # Display tuning results
@@ -238,7 +252,7 @@ glm_tune_results %>%
   slice(1)
 ```
 
-Looks like the combo of scaling, cross-validation lead us to better model calibration!
+Looks like the tuning lead us to better model calibration!
 
 ```{r}
 # Select the best hyperparameters based on RMSE
@@ -281,7 +295,7 @@ predicted_df |>
   theme_minimal()
 ```
 
-It looks like in this case, the model is better calibrated (in-line with actual results) for games between a 50-70% win pct for the home team. This doesn't tell us much other than that the model is unreliable on the extreme margins, however, NFL games rarely have games with such extreme dogs/favorites. 
+In this case, the model is better calibrated (in-line with actual results) for games between a 50-70% win pct for the home team. This doesn't tell us much other than that the model is unreliable on the extreme margins, however, NFL games rarely have games with such extreme dogs/favorites. 
 
 Regularization and model tuning is just one way to improve model perforance. In the next post, we'll likely take another crack at improving this model. Thank you for reading and feel free to reach out to me with any questions/suggestions!
 
